# ITPEC

./: README.md
Algorithms/: pom.xml
Algorithms/src/main/java/Easy/: Sqrt.java
Algorithms/src/main/java/basic/: PalindromeNumber.java  PrimeNumberLister.java  RemoveDuplicates.java  TwoSum.java
Algorithms/src/test/java/Easy/: SqrtTest.java
Algorithms/src/test/java/basic/: PalindromeCheckerTest.java  PrimeNumberListerTest.java  TwoSumTest.java  removeDuplicatesTest.java
DSA/: .gitignore  CMakeLists.txt
DSA/include/array/: two_sum.h
DSA/include/bitManipulation/: addbinary.h
DSA/include/exercises/: list_divisors.h  palindrome_number.h  product_of_divisors.h  sum_series.h  sum_squares.h  sumn.h
DSA/include/hashtable/: roman_to_int.h
DSA/include/matrix/: analyze_matrix.h
DSA/src/array/: two_sum.cpp
DSA/src/bitManipulation/: add_binary.cpp  addbinary.cpp  twosum.cpp
DSA/src/exercises/: list_divisors.cpp  product_of_divisors.cpp  sum_series.cpp  sum_squares.cpp  sumn.cpp
DSA/src/hashtable/: roman_to_int.cpp
DSA/src/matrix/: analyze_matrix.cpp
DSA/test/array/: test_two_sum.cpp
DSA/test/bitManipulation/: test_add_binary.cpp  test_addbinary.cpp  test_twosum.cpp
DSA/test/exercises/: test_palindrome_number.cpp  test_product_of_divisors.cpp  test_sum_series.cpp  test_sum_squares.cpp  test_sumn.cpp
DSA/test/hashtable/: test_roman_to_int.cpp
DSA/test/matrix/: test_analyze_matrix.cpp
FullCourse/Hypotenuse/: main.cpp
FullCourse/arithmetic/: main.cpp
FullCourse/namespace/: main.cpp
FullCourse/typealias/: main.cpp
Fundamental Information Technology Engineer Examination/: De thi tham khao.rar  FE_VN_2005(H17)Spring.rar
Vietnamese/: sach.rar
algorithms/: pom.xml
code/: composer.json  pom.xml
code/src/exercises/: FirstOddDigit.php  IsPrimeNumber.php  OddValuesFromArray.php  findAbsolute.php  findFurthestValue.php  hasEvenNumber.php  isPrimeNumber.php
code/src/exercises/tests/: FindAbsoluteTest.php  FindFurthestValueTest.php  FirstOddDigitTest.php  HasEvenNumberTest.php  IsPrimeNumberTest.php  OddValuesFromArrayTest.php  findAbsoluteTest.php  hasEvenNumberTest.php  isPrimeNumberTest.php
code/src/leetcode/bitManipulation/: AddBinary.php
code/src/leetcode/bitManipulation/tests/: AddBinaryTest.php
code/src/main/java/bits/: MinimumBitFlipsToConvertNumber.java
code/src/main/java/common/: ListNode.java  TreeNode.java
code/src/oop/OfficialManagementSystem/config/: Database.php
code/src/oop/OfficialManagementSystem/controllers/: OfficialController.php
code/src/oop/OfficialManagementSystem/models/: Date.php  Official.php
code/src/oop/OfficialManagementSystem/public/: index.php
code/src/oop/OfficialManagementSystem/repositories/: OfficialRepository.php
code/src/oop/OfficialManagementSystem/routes/: api.php
code/src/oop/officialManagementSystem/config/: connection.php  test_connection.php
code/src/oop/officialManagementSystem/public/: index.php
code/src/oop/officialManagementSystem/views/: layout.php
codeforces/: square_year.cpp  watermelon..cpp
course/constant/: main.cpp
course/conversion/: main.cpp
course/pointers/: main.cpp
course/variables/: main.cpp
dsa/: CMakeLists.txt
dsa/include/array/: two_sum.h
dsa/include/exercises/: list_divisors.h  palindrome_number.h  product_of_divisors.h  sum_series.h  sum_squares.h
dsa/include/hashtable/: roman_to_int.h
dsa/include/matrix/: analyze_matrix.h
dsa/src/array/: two_sum.cpp
dsa/src/bitManipulation/: add_binary.cpp
dsa/src/exercises/: list_divisors.cpp  palindrome_number.cpp  product_of_divisors.cpp  sum_series.cpp  sum_squares.cpp  sumn.cpp
dsa/src/hashtable/: roman_to_int.cpp
dsa/src/matrix/: analyze_matrix.cpp
dsa/test/bitManipulation/: test_add_binary.cpp
dsa/test/exercises/: test_list_divisors.cpp  test_palindrome_number.cpp  test_product_of_divisors.cpp  test_sum_series.cpp  test_sum_squares.cpp  test_sumn.cpp
dsa/test/hashtable/: test_roman_to_int.cpp
dsa/test/matrix/: test_analyze_matrix.cpp
js/: .gitignore  package-lock.json  package.json  twosum.js
js/test/: twosum.test.js
quizs/: koenig_lookup.cpp
(+32 files in other folders)
